--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -6,7 +6,7 @@
  */
 section.has-light-background, section.has-light-background h1, section.has-light-background h2, section.has-light-background h3, section.has-light-background h4, section.has-light-background h5, section.has-light-background h6 {
   color: #222; }
-section.font-white h2 {
+section.font-white h2, section.font-white h3 {
   color: #fff;}
 
 /*********************************************
